# options-pricer

./: .env.example  .gitignore  LICENSE  README.md  SPEC.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
examples/: make_all_charts.py
notebooks/: 01_full_demo.ipynb  02_validation_report.ipynb
outputs/: .gitkeep
src/: __init__.py  data.py  greeks.py  models.py  plots.py  validation.py  volatility.py
tests/: conftest.py  test_greeks.py  test_models.py  test_perf.py  test_validation.py  test_volatility.py
