[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "options-pricer"
version = "1.0.0"
description = "European option pricing: BSM, Binomial, Monte Carlo; Greeks; IV surface."
requires-python = ">=3.10"
dependencies = [
    "numpy>=1.26.0",
    "scipy>=1.11.0",
    "pandas>=2.1.0",
    "yfinance>=0.2.36",
    "fredapi>=0.5.1",
    "matplotlib>=3.8.0",
    "plotly>=5.18.0",
    "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
dev = ["pytest>=7.4.0", "pytest-cov>=4.1.0", "pytest-benchmark>=4.0.0"]

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
addopts = "-v --tb=short --strict-markers"
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "network: marks tests requiring internet",
]

[tool.black]
line-length = 100

[tool.ruff]
line-length = 100
target-version = "py310"